# modeltrainer

./: .gitignore  LICENSE  PLAN.md  README.md  algorithm.md  masterplan.md  models.md  pyproject.toml  research.md  training.md
configs/: feature_view.json  folds.json  horizons.json  model_params.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  DashboardLayout.tsx  DatasetChart.tsx  api.ts  styles.css  types.ts
scripts/: start-wsl-rocm.ps1
scripts/wsl_rocm/: install_optional_ml.sh  install_pytorch_rocm.sh  install_rocm_stack.sh  setup_app_env.sh  start_backend.sh  verify_rocm.sh
specs/: V2_PLAN.md  models2.md  quant.md
src/markets_pipeline/: __init__.py  cli.py  dashboard.py  dashboard_launcher.py  pipeline.py  settings.py  types.py
src/markets_pipeline/contracts/: __init__.py  findf.py
src/markets_pipeline/datasets/: __init__.py  labels.py  snapshots.py
src/markets_pipeline/eval/: baselines.py  metrics.py
src/markets_pipeline/features/: __init__.py  events.py  macro.py  sentiment.py  technical.py
src/markets_pipeline/models/: common.py  finbert_features.py  fusion.py  tabular.py
src/markets_pipeline/registry/: store.py
src/markets_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quant_platform/: __init__.py  config.py  database.py  layer_controls.py  main.py  research_layers.py  runtime_profiles.py  schemas.py  seed.py
src/quant_platform/pipeline/: __init__.py  data.py  execution.py  features.py  layered_models.py  risk.py  testing.py  text_embeddings.py  training.py
src/quant_platform/services/: control_plane.py
tests/: support.py  test_api.py  test_layered_stack.py  test_pipeline_contracts.py  test_pipeline_math.py  test_research_layers.py  test_runtime_launch.py  test_snapshot_and_labels.py
