[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markets-trainer"
version = "0.1.0"
description = "Offline specialist-expert training pipeline that consumes findf outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost==1.2.7",
  "duckdb==1.1.3",
  "joblib==1.4.2",
  "lightgbm==4.5.0",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "pyarrow==18.0.0",
  "scikit-learn==1.5.2",
  "scipy==1.14.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
]
nlp = [
  "sympy==1.13.1",
  "torch==2.5.1",
  "transformers==4.46.3",
]
ui = [
  "streamlit==1.39.0",
]

[project.scripts]
markets-trainer = "markets_pipeline.cli:main"
markets-dashboard = "markets_pipeline.dashboard_launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
