[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-platform"
version = "0.1.0"
description = "Local-first quant research platform with training, testing, risk, and monitoring flows."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "duckdb>=1.1.3",
  "fastapi>=0.115.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.2",
  "python-multipart>=0.0.12",
  "scikit-learn>=1.5.2",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]
ml = [
  "lightgbm>=4.5.0",
  "torch>=2.4.1",
  "transformers>=4.45.2",
]

[project.scripts]
quant-platform-api = "quant_platform.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
